--- a/.env.sample
+++ b/.env.sample
@@ -4,8 +4,8 @@ DEBUG=
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-SQL_HOST=
-SQL_PORT=
+POSTGRES_HOST=
+POSTGRES_PORT=
 
 CELERY_RESULT_BACKEND=
 CELERY_BROKER_URL=
