--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 django = "^5.0.7"
 python-dotenv = "^1.0.1"
 django-cors-headers = "^4.4.0"
+redis = "^5.0.8"
 celery = "^5.4.0"
 django-celery-beat = "^2.6.0"
 drf-yasg = "^1.21.7"
@@ -24,6 +25,7 @@ requests = "^2.32.3"
 django-filter = "^24.3"
 freezegun = "^1.5.1"
 flake8 = "^7.1.1"
+
 
 
 [build-system]
